[package]
name = "fortress"
version = "0.1.0"
authors = ["Joseph <wax818@gmail.com>"]
edition = "2018"

[dependencies]
enum-iterator = "0.3"
generational-arena = "0.2"
gl = "0.12"
glm = "0.2"
hashbrown = "0.2"
lazy_static = "1.3"
lodepng = "2.4"
nalgebra = "0.18"
ncollide2d = "0.19"
notify = "4.0"
nphysics2d = "0.11"
rand = "0.6"
rand_xorshift = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slab = "0.4"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["mixer"]

[lib]
name = "fortress"
path = "src/lib/lib.rs"

[[bin]]
name = "fortress"
path = "src/bin/main.rs"
