[package]
name = "fortress"
version = "0.1.0"
authors = ["Joseph <no@thanks.com>"]
edition = "2021"

[dependencies]
enum-iterator.workspace = true
fortress_bake = { path = "../fortress_bake"}
generational_slab = { path = "../generational_slab"}
gl.workspace = true
glm.workspace = true
nalgebra.workspace = true
ncollide2d.workspace = true
nphysics2d.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_xorshift.workspace = true
ron.workspace = true
sdl2.workspace = true
serde.workspace = true
serde_derive.workspace = true

[features]
bake = []

[build-dependencies]
fortress_bake = { path = "../fortress_bake"}

[lib]
name = "fortress"
path = "src/lib/lib.rs"

[[bin]]
name = "fortress"
path = "src/bin/main.rs"
