[package]
name = "fortress_bake"
version = "0.1.0"
authors = ["Joseph <no@thanks.com>"]
edition = "2018"

[dependencies]
enum-iterator = "0.6"
font-atlas = "0.1"
gl = "0.14"
glm = "0.2"
lazy_static = "1.4"
memmap = "0.7"
notify = "4.0"
png = "0.16"
rect_packer = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[features]
bake = []
