[package]
name = "fortress_bake"
version = "0.1.0"
authors = ["Joseph <no@thanks.com>"]
edition = "2021"

[dependencies]
enum-iterator.workspace = true
gl.workspace = true
glm.workspace = true
lazy_static.workspace = true
memmap.workspace = true
notify.workspace = true
png.workspace = true
rect_packer.workspace = true
ron.workspace = true
rusttype.workspace = true
serde.workspace = true
serde_derive.workspace = true

[features]
bake = []
